--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
     "test:coverage": "npm test -- --coverage",
     "test:badges": "npm run test:coverage  && jest-coverage-badges",
     "test": "jest",
-    "lint": "eslint lib/* __tests__/* --ext .ts",
-    "lint:fix": "eslint lib/* __tests__/* --ext .ts --fix",
-    "build": "tsc",
-    "prepare": "tsc",
+    "lint": "eslint lib/* __tests__/*.ts --ext .ts",
+    "lint:fix": "eslint lib/* __tests__/*.ts --ext .ts --fix",
+    "build:ldo": "ldo build --input ./shapes --output ./ldo",
+    "build": "npm run build:ldo && tsc",
+    "prepare": "npm run build",
     "semantic-release": "semantic-release"
   },
   "repository": {
@@ -32,13 +33,18 @@
   },
   "homepage": "https://github.com/jeswr/utils/README.md",
   "devDependencies": {
+    "@ldo/cli": "^0.0.1-alpha.24",
     "@types/jest": "^29.5.12",
+    "@types/n3": "^1.16.4",
+    "@types/rdfjs__term-set": "^2.0.9",
     "@typescript-eslint/eslint-plugin": "^7.12.0",
     "@typescript-eslint/parser": "^7.12.0",
     "eslint": "^8.57.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.29.1",
     "jest": "^29.7.0",
+    "jest-rdf": "^1.8.1",
+    "n3": "^1.17.3",
     "pre-commit": "^1.2.2",
     "semantic-release": "^24.0.0",
     "ts-jest": "^29.1.4",
@@ -83,5 +89,14 @@
   },
   "publishConfig": {
     "access": "public"
+  },
+  "dependencies": {
+    "@ldo/ldo": "^0.0.1-alpha.24",
+    "@rdfjs/term-set": "^1.1.0",
+    "@rdfjs/types": "^1.1.0",
+    "@shexjs/neighborhood-rdfjs": "^1.0.0-alpha.29",
+    "@shexjs/validator": "^1.0.0-alpha.29",
+    "rdf-dereference-store": "^1.1.0",
+    "rdf-js": "^4.0.2"
   }
 }
